# Peptide_Network_CPP

./: CMakeLists.txt  LICENSE.md  README.md
Debug/: CMakeCache.txt  Makefile  Peptide__Network_CPP  cmake_install.cmake
Release/: CMakeCache.txt  Makefile  Peptide__Network_CPP  cmake_install.cmake
headers/: Connection.h  Net.cpp  Neuron.cpp  Neuron.h
include/: Net.cpp  Net.h  Neuron.cpp  Neuron.h
src/: main  main.cpp  test  test.cpp
